alignment issues fixed with social icons

--- a/src/index.css
+++ b/src/index.css
@@ -6,16 +6,14 @@ main {
 	margin: 0 auto;
 	max-width: 90%;
   padding: 50px 30px;
+
 }
 
 * {
   box-sizing: border-box;
 }
 
-html,
-body {
-  min-height: 100%;
-}
+
 
 body {
   margin: 0;
@@ -31,11 +29,12 @@ body {
   background-image: url('./assets/background/mtn2.jpg');
   width: 100%;
   height: 100%;
-
   color: var(--light);
-
+  position: relative;
+  min-height: 100vh;
 
 }
+
 
 .header {
   margin-top: 20px;
@@ -100,6 +99,14 @@ body {
   text-decoration: inherit;
   text-transform: uppercase;
   outline: none;
+}
+
+.footer {
+  align-items: center;
+  position: absolute;
+  padding: 10px 10px 0px 10px;
+  bottom: 0;
+  width: 100%;
 }
 
 .my-2 {
